improvement in size,colors

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +8,21 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
 </head>
+
 <body>
     <div class="container">
         <!-- Header Navigation -->
         <header class="header">
             <nav class="nav">
                 <a href="#home">Home</a>
-                <a href="#work" class="active">Work</a>
-                <a href="#about">About</a>
+                <a href="#work" class="active">Projects</a>
+                <a href="#about">Contact</a>
             </nav>
         </header>
 
         <!-- Hero Section -->
         <section class="hero">
-            <h1>&gt; <span class="name">Arvindraj_Ramesh</span></h1>
+            <h1 style="color: var(--color-primary);">&gt; <span class="name">Arvindraj_Ramesh</span></h1>
             <h4>I'm a <span class="text"> </span></h4>
             <p>in the bay area who enjoys designing and building beautiful, performant things.</p>
         </section>
@@ -33,34 +35,34 @@
                     <div class="terminal-button yellow"></div>
                     <div class="terminal-button green"></div>
                 </div>
-                <div class="terminal-title">cat arvindraj_ramesh.json</div>
+                <div class="terminal-title">cat arvindrajramesh.json</div>
             </div>
             <div class="code">
-                <span class="code-line"><span class="bracket">{</span></span>
-                <span class="code-line">  <span class="key">"name"</span>: <span class="string">"Arvindraj Ramesh"</span>,</span>
-                <span class="code-line">  <span class="key">"location"</span>: <span class="string">"Tambaram, Chennai"</span></span>
-                <span class="code-line">  <span class="key">"contactInfo"</span>: <span class="bracket">{</span></span>
-                <span class="code-line">    <span class="key">"email"</span>: <span class="string">"just.arvindraj@gmail.com"</span>,</span>
-                <span class="code-line">    <span class="key">"linkedIn"</span>: <span class="string">"linkedin.com/in/placeholder"</span>,</span>
-                <span class="code-line">    <span class="key">"github"</span>: <span class="string">"https://github.com/placeholder"</span></span>
-                <span class="code-line">  <span class="bracket">},</span></span>
-                <span class="code-line">  <span class="key">"currentRole"</span>: <span class="string">"Software Engineer"</span>,</span>
-                <span class="code-line">  <span class="key">"methods"</span>: <span class="string">"GET"</span></span>
-                <span class="code-line">  <span class="key">"interests"</span>: <span class="bracket">[</span></span>
-                <span class="code-line">    <span class="key">"design"</span>, <span class="string">"websites"</span>, <span class="string">"frontend"</span>, <span class="string">"/*/node/"</span>, <span class="string">"startups"</span></span>
-                <span class="code-line">  <span class="bracket">],</span></span>
-                <span class="code-line">  <span class="key">"education"</span>:</span>
-                <span class="code-line">    <span class="string">"Anna University"</span></span>
-                <span class="code-line">  <span class="key">"skills"</span>: <span class="bracket">[</span></span>
-                <span class="code-line">    <span class="string">"HTML"</span>, <span class="string">"CSS"</span>, <span class="string">"Javascript"</span>, <span class="string">"jQuery"</span>, <span class="string">"Bootstrap"</span>, <span class="string">"Express"</span>,</span>
-                <span class="code-line">    <span class="string">"Node.js"</span>, <span class="string">"MongoDB"</span>, <span class="string">"MySQL"</span></span>
-                <span class="code-line">  <span class="bracket">],</span></span>
-                <span class="code-line">  <span class="key">"tools"</span>: <span class="bracket">[</span></span>
-                <span class="code-line">    <span class="string">"git"</span>, <span class="string">"webpack"</span>, <span class="string">"bower"</span>, <span class="string">"sketch"</span></span>
-                <span class="code-line">  <span class="bracket">]</span></span>
-                <span class="code-line"><span class="bracket">}</span></span>
+                <span class="code-line">&gt; Arvindraj.location</span>
+                <span class="code-value">"Tambaram, Chennai"</span>
+                <br>
+
+                <span class="code-line">&gt; Arvindraj.contact</span>
+                <span class="code-value">["just.arvindraj@gmail.com", "LinkedIn", "github"]</span>
+                <br>
+
+                <span class="code-line">&gt; Arvindraj.resume</span>
+                <span class="code-value">"arvindraj.pdf"</span>
+                <br>
+
+                <span class="code-line">&gt; Arvindraj.interests</span>
+                <span class="code-value">["security", "AI", "gaming", "tool dev"]</span>
+                <br>
+
+                <span class="code-line">&gt; Arvindraj.education</span>
+                <span class="code-value">"B.E. Computer Science - Anna University"</span>
+                <br>
+
+                <span class="code-line">&gt; Arvindraj.languages</span>
+                <span class="code-value">["Python", "JavaScript", "Bash", "Go"]</span>
             </div>
         </div>
+
 
         <!-- Work Section -->
         <section class="work-section">
@@ -76,7 +78,9 @@
                         <div class="dot"></div>
                     </div>
                     <h3><a href="#project1" class="project-link">Travel Places App</a></h3>
-                    <p>Travel smarter by saving the places you want to go. This project was an assignment given for an interview. The requirements were to build a web-app that calls the Google Places API. It must include a map with pins and a list of locations, with some interactivity between the two.</p>
+                    <p>Travel smarter by saving the places you want to go. This project was an assignment given for an
+                        interview. The requirements were to build a web-app that calls the Google Places API. It must
+                        include a map with pins and a list of locations, with some interactivity between the two.</p>
                     <div class="project-tags">
                         <span class="tag">React</span>
                         <span class="tag">Google Maps</span>
@@ -98,7 +102,9 @@
                         <div class="dot"></div>
                     </div>
                     <h3><a href="#project2" class="project-link">Stock Portfolio Tracker</a></h3>
-                    <p>This project is based off this challenge. Wrangled with styling HighCharts and learned the use of Promises. Data is from the Tradier API. Search autocomplete relies on the lookup endpoint and sometimes runs slow. Please be patient!</p>
+                    <p>This project is based off this challenge. Wrangled with styling HighCharts and learned the use of
+                        Promises. Data is from the Tradier API. Search autocomplete relies on the lookup endpoint and
+                        sometimes runs slow. Please be patient!</p>
                     <div class="project-tags">
                         <span class="tag">HighCharts</span>
                         <span class="tag">Promises</span>
@@ -120,7 +126,9 @@
                         <div class="dot"></div>
                     </div>
                     <h3><a href="#project3" class="project-link">ReactJS Learning App</a></h3>
-                    <p>My first major app built with ReactJS and it was a tremendous learning experience. This project was created for a good friend - check out her mock-up! Polymer components were taken directly from Google spec to ensure smooth animations on mobile.</p>
+                    <p>My first major app built with ReactJS and it was a tremendous learning experience. This project
+                        was created for a good friend - check out her mock-up! Polymer components were taken directly
+                        from Google spec to ensure smooth animations on mobile.</p>
                     <div class="project-tags">
                         <span class="tag">ReactJS</span>
                         <span class="tag">Polymer</span>
@@ -142,7 +150,9 @@
                         <div class="dot"></div>
                     </div>
                     <h3><a href="#project4" class="project-link">Calculator Web App</a></h3>
-                    <p>Applied techniques learned from Practical Javascript - writing requirements, iterating, and structuring app as an MVC. This really helped me build a much better foundation in JavaScript for web development. Design is based off the original Google Calculator on Android.</p>
+                    <p>Applied techniques learned from Practical Javascript - writing requirements, iterating, and
+                        structuring app as an MVC. This really helped me build a much better foundation in JavaScript
+                        for web development. Design is based off the original Google Calculator on Android.</p>
                     <div class="project-tags">
                         <span class="tag">JavaScript</span>
                         <span class="tag">MVC</span>
@@ -172,4 +182,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
