improved terminal and others

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="arvindraj ramesh, portfolio, software developer">
+    <meta name="description" content="Arvindraj Ramesh's Portfolio">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>Arvindraj Ramesh</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
@@ -14,19 +17,20 @@
         <!-- Header Navigation -->
         <header class="header">
             <nav class="nav">
-                <a href="#work" class="active">Projects</a>
-                <a href="#about">Contact</a>
+                <a href="#projects" class="active">Projects</a>
+                <a href="#contact">Contact</a>
             </nav>
         </header>
 
         <!-- Hero Section -->
         <section class="hero">
-            <h1 style="color: var(--color-primary);">&gt; <span class="name">Arvindraj_Ramesh</span></h1>
+            <h1 style="color: var(--color-primary);">&gt; <span class="name">Arvindraj_Ramesh<span
+                        id="blink">&nbsp;</span></span></h1>
             <h4>I'm a <span class="text"> </span></h4>
             <p>in the bay area who enjoys designing and building beautiful, performant things.</p>
         </section>
 
-        <!-- Kali Linux Terminal -->
+        <!--Terminal -->
         <div class="terminal">
             <div class="terminal-header">
                 <div class="terminal-buttons">
@@ -34,7 +38,7 @@
                     <div class="terminal-button yellow"></div>
                     <div class="terminal-button green"></div>
                 </div>
-                <div class="terminal-title">cat arvindrajramesh.json</div>
+                <!-- <div class="terminal-title">cat arvindrajramesh.json</div> -->
             </div>
             <div class="code">
                 <span class="code-line">&gt; Arvindraj.location</span>
@@ -42,31 +46,36 @@
                 <br>
 
                 <span class="code-line">&gt; Arvindraj.contact</span>
-                <span class="code-value">["just.arvindraj@gmail.com", "LinkedIn", "github"]</span>
+                <span class="code-value">["<a rel="noopener" href="mailto:just.arvindraj@gmail.com" target="_blank">just.arvindraj@gmail.com</a>",
+                    "<a rel="noopener" href="https://www.linkedin.com/in/arvindraj-ramesh/">LinkedIn</a>",
+                    "<a rel="noopener" href="https://github.com/Thecoolguy00">github</a>"]</span>
                 <br>
 
                 <span class="code-line">&gt; Arvindraj.resume</span>
-                <span class="code-value">"arvindraj.pdf"</span>
+                <span class="code-value">"<a rel="noopener" href="/arvindraj_resume.pdf"
+                        target="_blank">arvindraj.pdf</a>"</span>
                 <br>
 
                 <span class="code-line">&gt; Arvindraj.interests</span>
-                <span class="code-value">["security", "AI", "gaming", "tool dev"]</span>
+                <span class="code-value">["Cybersecurity", "AI/ML", "Gaming", "DevOps"]</span>
                 <br>
 
                 <span class="code-line">&gt; Arvindraj.education</span>
-                <span class="code-value">"B.E. Computer Science - Anna University"</span>
+                <span class="code-value">"B.E. Computer Science and Engineering - Anna University"</span>
                 <br>
 
                 <span class="code-line">&gt; Arvindraj.languages</span>
-                <span class="code-value">["Python", "JavaScript", "Bash", "Go"]</span>
+                <span class="code-value">["C", "Python", "Java", "Bash"]</span>
+                <br>
+                <span class="code-line">&gt; <span class="cursor">&nbsp;</span></span>
             </div>
         </div>
 
 
-        <!-- Work Section -->
+        <!-- Projects Section -->
         <section class="work-section">
             <div class="section-header">
-                <h2 class="section-title">Work</h2>
+                <h2 id="projects" class="section-title">Projects</h2>
             </div>
 
             <div class="projects">
@@ -167,15 +176,15 @@
                 </div>
             </div>
         </section>
-
+        <h2 id="contact" class="section-title">Contact me!</h2>
         <!-- Footer -->
         <footer class="footer">
-            <div class="footer-links">
-                <a href="mailto:jchi224@gmail.com">just.arvindraj@gmail.com</a>
-                <a href="https://linkedin.com/in/placeholder" target="_blank">LinkedIn</a>
-                <a href="https://github.com/placeholder" target="_blank">GitHub</a>
+            <div class="footer-links nav">
+                <a href="mailto:just.arvindraj@gmail.com">just.arvindraj@gmail.com</a>
+                <a href="https://www.linkedin.com/in/arvindraj-ramesh/" target="_blank">LinkedIn</a>
+                <a href="https://github.com/Thecoolguy00" target="_blank">GitHub</a>
             </div>
-            <div class="copyright">© 2025 Arvindraj Ramesh</div>
+            <div class="copyright">Made by Arvindraj Ramesh © 2025</div>
         </footer>
     </div>
 
