fixed link to resume

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <br>
 
                 <span class="code-line">&gt; Arvindraj.resume</span>
-                <span class="code-value">"<a rel="noopener" href="/arvindraj_resume.pdf"
+                <span class="code-value">"<a rel="noopener" href="arvindraj_resume.pdf"
                         target="_blank">arvindraj.pdf</a>"</span>
                 <br>
 
